FIX: Aligned texts should not be offset.
Regression caused by fe977d1fdcc7ca55a87ca9a47995d03322f77f40.

--- a/frontend/src/CroppedImage.css
+++ b/frontend/src/CroppedImage.css
@@ -3,7 +3,3 @@
   margin-top: 15px;
 }
 
-.figure-body {
-  margin-top: 20px !important;
-}
-
