--- a/frontend/src/Page.css
+++ b/frontend/src/Page.css
@@ -13,6 +13,7 @@
 
 .page .runningHead div {
   padding-top: 17px;
+  padding-bottom: 17px;
 }
 
 .page .row:first-of-type .main {
